Added very basic framework of logo header

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -10,19 +10,35 @@
 
 <body>
     <header>
-        <div class="container">
+        <section class="promotion">
             <a href="http://skinnyties.com/offers/">
                 <ul>
-                    <li id="free">Free Shipping!</li>
+                    <li id="free">FREE SHIPPING!</li>
                     <li>$10 off $50 order!</li>
                     <li>$20 off $100 order!</li>
                     <li>$30 off $150 order!</li>
                 </ul>
             </a>
-        </div>
-        <div class="nav">
-            <h1></h1>
-        </div>
+        </section>
+
+        <section class="navigation">
+            <div>
+                <a href="http://skinnyties.com/"><img class="logo" src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/master/daily/04-internet/assets/logo-stack@2x.png?raw=true"
+                    /></a>
+                <a href="http://skinnyties.com/collection/">Collection
+                </a>
+                <a href="http://skinnyties.com/color/">Color
+                </a>
+                <a href="http://skinnyties.com/width/">Width
+                </a>
+                <a href="http://skinnyties.com/fabric/">Fabric
+                </a>
+                <a href="http://skinnyties.com/pattern/">Pattern
+                </a>
+            </div>
+            <div>
+            </div>
+        </section>
     </header>
 
     <main>
