Abolished css to bits

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -25,20 +25,23 @@
             <div>
                 <a href="http://skinnyties.com/"><img class="logo" src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/master/daily/04-internet/assets/logo-stack@2x.png?raw=true"
                     /></a>
-                <a href="http://skinnyties.com/collection/">Collection
-                </a>
-                <a href="http://skinnyties.com/color/">Color
-                </a>
-                <a href="http://skinnyties.com/width/">Width
-                </a>
-                <a href="http://skinnyties.com/fabric/">Fabric
-                </a>
-                <a href="http://skinnyties.com/pattern/">Pattern
-                </a>
             </div>
             <div>
+                <ul>
+                    <li><a href="http://skinnyties.com/collection/">Collection
+                </a></li>
+                    <li><a href="http://skinnyties.com/color/">Color
+                </a></li>
+                    <li><a href="http://skinnyties.com/width/">Width
+                </a></li>
+                    <li><a href="http://skinnyties.com/fabric/">Fabric
+                </a></li>
+                    <li><a href="http://skinnyties.com/pattern/">Pattern
+                </a></li>
+                </ul>
             </div>
         </section>
+
     </header>
 
     <main>
