fixed some issues from git checkout during class

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -10,14 +10,17 @@
 
 <body>
     <header>
+
         <section class="promotion">
             <a href="http://skinnyties.com/offers/">
-                <ul>
-                    <li id="free">FREE SHIPPING!</li>
-                    <li>$10 off $50 order!</li>
-                    <li>$20 off $100 order!</li>
-                    <li>$30 off $150 order!</li>
-                </ul>
+                <div class="title">Free Shipping!</div>
+                <div class="money">
+                    <ul>
+                        <li>$10 off $50 order!</li>
+                        <li>$20 off $100 order!</li>
+                        <li>$30 off $150 order!</li>
+                    </ul>
+                </div>
             </a>
         </section>
 
@@ -36,8 +39,7 @@
                 <a href="http://skinnyties.com/pattern/">Pattern
                 </a>
             </div>
-            <div>
-            </div>
+
         </section>
     </header>
 
