Added Tie Bar and tie links

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>Skinny Ties</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="master.css">
     <link rel="stylesheet" href="frontpage.css">
 </head>
@@ -24,30 +25,88 @@
             </a>
         </section>
 
-        <section class="navigation">
-            <div>
-                <a href="http://skinnyties.com/"><img class="logo" src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/master/daily/04-internet/assets/logo-stack@2x.png?raw=true"
-                    /></a>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="http://skinnyties.com/collection/">Collection
+        <nav>
+            <section class="navigation">
+                <div class="logo">
+                    <a href="http://skinnyties.com/"><img class="logo" src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/master/daily/04-internet/assets/logo-stack@2x.png?raw=true"
+                        /></a>
+                </div>
+
+                <div class="annoying">
+                    <ul>
+                        <li><a href="http://skinnyties.com/collection/">Collection
+                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li><a href="http://skinnyties.com/color/">Color
+                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li><a href="http://skinnyties.com/width/">Width
+                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li><a href="http://skinnyties.com/fabric/">Fabric
+                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li><a href="http://skinnyties.com/pattern/">Pattern
                 </a></li>
-                    <li><a href="http://skinnyties.com/color/">Color
-                </a></li>
-                    <li><a href="http://skinnyties.com/width/">Width
-                </a></li>
-                    <li><a href="http://skinnyties.com/fabric/">Fabric
-                </a></li>
-                    <li><a href="http://skinnyties.com/pattern/">Pattern
-                </a></li>
-                </ul>
-            </div>
-        </section>
+                    </ul>
+                </div>
+
+                <form>
+                    <input type="submit" value="Cart">
+                    <div id="search">
+                        <input type="text" placeholder="Search">
+                    </div>
+                </form>
+            </section>
+            <nav>
 
     </header>
 
-    <main>
+    <main class="ties">
+        <ul class="ties">
+            <li>
+                <a href="http://skinnyties.com/color/black/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/black%401.5x.jpg"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Black</div>-->
+            <li>
+                <a href="http://skinnyties.com/color/blue/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/blue%401.5x.jpg"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Blue</div>-->
+            <li>
+                <a href="http://skinnyties.com/collection/collegiate/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/collegiate%401.5x.jpg"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Collegiate</div>-->
+            <li>
+                <a href="http://skinnyties.com/fabric/cotton/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/cotton%401.5x.jpg"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Cotton</div>-->
+            <li>
+                <a href="http://skinnyties.com/collection/favorites/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/favorites%401.5x.jpg"
+                    /></li>
+            </a>
+            <!--<div class id="ties" Favorites</div>-->
+                <li>
+                    <a href="http://skinnyties.com/pattern/graphic/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/graphic%401.5x.jpg"
+                        /></li>
+                </a>
+                <!--<div class id="ties">Graphic</div>-->
+                <li>
+                    <a href="http://skinnyties.com/pattern/plaid/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/plaid%401.5x.jpg"
+                        /></li>
+                </a>
+                <!--<div class id="ties">Plaid</div>-->
+                <li>
+                    <a href="http://skinnyties.com/fabric/silk/"><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/silk@1.5x.jpg?raw=true"
+                        /></li>
+                </a>
+                <!--<div class id="ties">Silk</div>-->
+                <li>
+                    <a href="http://skinnyties.com/pattern/striped/"><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/striped@1.5x.jpg?raw=true"
+                        /></li>
+                </a>
+                <!--<div class id="ties">Striped</div>-->
+        </ul>
+        <h1>Start dressing better.</h1>
     </main>
 
     <footer>
