FINALLY got nav bar to flex - stopping point for Friday

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -23,6 +23,7 @@
                     </ul>
                 </div>
             </a>
+            </div>
         </section>
 
         <nav>
@@ -32,22 +33,22 @@
                         /></a>
                 </div>
 
-                <div class="annoying">
-                    <ul>
-                        <li><a href="http://skinnyties.com/collection/">Collection
-                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <li><a href="http://skinnyties.com/color/">Color
-                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <li><a href="http://skinnyties.com/width/">Width
-                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <li><a href="http://skinnyties.com/fabric/">Fabric
-                </a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <li><a href="http://skinnyties.com/pattern/">Pattern
+                <ul class="annoying">
+                    <li><a href="http://skinnyties.com/collection/">Collection
                 </a></li>
-                    </ul>
-                </div>
+                    <li><a href="http://skinnyties.com/color/">Color
+                </a></li>
+                    <li><a href="http://skinnyties.com/width/">Width
+                </a></li>
+                    <li><a href="http://skinnyties.com/fabric/">Fabric
+                </a></li>
+                    <li><a href="http://skinnyties.com/pattern/">Pattern
+                </a></li>
+                </ul>
 
                 <form>
+                    <a href="https://skinnyties.com/customer/account/login/">Sign In</a>
+                    <a href="https://skinnyties.com/customer/account/create/">Register</a>
                     <input type="submit" value="Cart">
                     <div id="search">
                         <input type="text" placeholder="Search">
@@ -85,26 +86,26 @@
                     /></li>
             </a>
             <!--<div class id="ties" Favorites</div>-->
-                <li>
-                    <a href="http://skinnyties.com/pattern/graphic/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/graphic%401.5x.jpg"
-                        /></li>
-                </a>
-                <!--<div class id="ties">Graphic</div>-->
-                <li>
-                    <a href="http://skinnyties.com/pattern/plaid/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/plaid%401.5x.jpg"
-                        /></li>
-                </a>
-                <!--<div class id="ties">Plaid</div>-->
-                <li>
-                    <a href="http://skinnyties.com/fabric/silk/"><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/silk@1.5x.jpg?raw=true"
-                        /></li>
-                </a>
-                <!--<div class id="ties">Silk</div>-->
-                <li>
-                    <a href="http://skinnyties.com/pattern/striped/"><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/striped@1.5x.jpg?raw=true"
-                        /></li>
-                </a>
-                <!--<div class id="ties">Striped</div>-->
+            <li>
+                <a href="http://skinnyties.com/pattern/graphic/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/graphic%401.5x.jpg"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Graphic</div>-->
+            <li>
+                <a href="http://skinnyties.com/pattern/plaid/"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/plaid%401.5x.jpg"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Plaid</div>-->
+            <li>
+                <a href="http://skinnyties.com/fabric/silk/"><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/silk@1.5x.jpg?raw=true"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Silk</div>-->
+            <li>
+                <a href="http://skinnyties.com/pattern/striped/"><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/striped@1.5x.jpg?raw=true"
+                    /></li>
+            </a>
+            <!--<div class id="ties">Striped</div>-->
         </ul>
         <h1>Start dressing better.</h1>
     </main>
