Ties spaced correctly triple and story bars added

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -108,6 +108,35 @@
             <!--<div class id="ties">Striped</div>-->
         </ul>
         <h1>Start dressing better.</h1>
+
+        <section class="triple">
+            <ul>
+                <li>
+                    <a href="http://skinnyties.com/collection/bow-ties/">
+                        <h2>Bow Ties</h2><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/bow-ties.jpg"
+                        /></a>
+                </li>
+                <li>
+                    <a href="http://skinnyties.com/collection/pocket-squares/">
+                        <h2>Pocket Squares</h2><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/pocket-squares.jpg"
+                        /></a>
+                </li>
+                <li>
+                    <a href="http://skinnyties.com/collection/tie-bars/">
+                        <h2>Tie Bars</h2><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/tie-bars@1.5x.jpg?raw=true"
+                        /></a>
+                </li>
+            </ul>
+
+            <div id="story">
+                <p>We started designing and selling neckties in 1971.</p>
+                <br>
+                <p>After 45 years, we're still family-owned and operated.</p>
+                <br>
+                <a href="http://skinnyties.com/our-story/">View our story</a>
+            </div>
+
+
     </main>
 
     <footer>
