Rough formatting of 90% og page

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -135,11 +135,41 @@
                 <br>
                 <a href="http://skinnyties.com/our-story/">View our story</a>
             </div>
-
-
     </main>
-
+    <!--<p id"x">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>-->
     <footer>
+        <section class="weekly">
+            <div id="weekly">
+                <h3>Weekly Pick</h3>
+                <br>
+                <a href="http://skinnyties.com/2-5-inch-blue-white-and-yellow-cotton-skinny-tie"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/plaid.jpg"
+                    /></a>
+            </div>
+            <div id="loop">
+                <h3>Loop Us In</h3>
+                <br>
+                <p>Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</p>
+            </div>
+            <div id="quart">
+                <h3>The Quarterly</h3>
+                <br>
+                <p>Our newsletter is simple and brief for the hard-pressed gentleman.</p>
+                <br>
+                <input id="email" type="text" placeholder="name@example.com">
+                <br>
+                <br>
+                <input id="sub" type="submit" value="Subscribe Me">
+            </div>
+            <div id="guide">
+                <h3>Style Guide</h3>
+                <br>
+                <a href="http://skinnyties.com/how-to-wear" /><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/style-guide@1.5x.jpg?raw=true"
+                /></a>
+            </div>
+        </section>
+
+        <section="contactus">
+            </section>
     </footer>
 </body>
 
