--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -36,8 +36,9 @@
                 <ul class="annoying">
                     <li><a href="http://skinnyties.com/collection/">Collection
                 </a></li>
-                    <li><a href="http://skinnyties.com/color/">Color
-                </a></li>
+                    <li>
+                        <a href="color.html">Color
+                        </a></li>
                     <li><a href="http://skinnyties.com/width/">Width
                 </a></li>
                     <li><a href="http://skinnyties.com/fabric/">Fabric
@@ -49,7 +50,8 @@
                 <form>
                     <a href="https://skinnyties.com/customer/account/login/">Sign In</a>
                     <a href="https://skinnyties.com/customer/account/create/">Register</a>
-                    <input type="submit" value="Cart">
+                    <br>
+                    <input id="input" type="submit" value="Cart">
                     <div id="search">
                         <input type="text" placeholder="Search">
                     </div>
@@ -144,6 +146,7 @@
                 <br>
                 <a href="http://skinnyties.com/2-5-inch-blue-white-and-yellow-cotton-skinny-tie"><img src="https://raw.githubusercontent.com/TIY-Charlotte-Frontend-Engineering/curriculum/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/plaid.jpg"
                     /></a>
+                <a id="some" href="http://skinnyties.com/2-5-inch-blue-white-and-yellow-cotton-skinny-tie">2.5" Blue White and Yellow Cotton Plaid Skinny Tie. Made in the USA</a>
             </div>
             <div id="loop">
                 <h3>Loop Us In</h3>
@@ -165,11 +168,44 @@
                 <br>
                 <a href="http://skinnyties.com/how-to-wear" /><img src="https://github.com/TIY-Charlotte-Frontend-Engineering/curriculum/blob/7b2e4f8d208bd5cdaaf1a34130e2d99580883dbe/daily/04-internet/assets/style-guide@1.5x.jpg?raw=true"
                 /></a>
+                <P>There are eighty-five ways to <span><a href="http://skinnyties.com/how-to-tie/">knot a tie</a></span>. We’ll
+                    show you <span><a href="http://skinnyties.com/how-to-wear/">the essentials</a></span>.</p>
             </div>
         </section>
 
-        <section="contactus">
-            </section>
+        <section class="contactus">
+
+            <ul>
+                <li>Shop By</li>
+                <li>Collection</li>
+                <li>Color</li>
+                <li>Width</li>
+                <li>Fabric</li>
+                <li>Pattern</li>
+            </ul>
+            <br>
+            <ul>
+                <li>About Us</li>
+                <li>Our Story</li>
+                <li>Where to Buy</li>
+                <li>Wholesale</li>
+                <li>Offers</li>
+            </ul>
+            <br>
+            <ul>
+                <li>Style Guide</li>
+                <li>How to Wear</li>
+                <li>How to Tie</li>
+            </ul>
+            <br>
+            <ul>
+                <li>Help</li>
+                <li>Contact Us</li>
+                <li>Shipping Info</li>
+                <li>Returns</li>
+            </ul>
+
+        </section>
     </footer>
 </body>
 
