Added contact us button in footer

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -48,8 +48,10 @@
                 </ul>
 
                 <form>
-                    <a href="https://skinnyties.com/customer/account/login/">Sign In</a>
-                    <a href="https://skinnyties.com/customer/account/create/">Register</a>
+                    <div id="signing">
+                        <a href="https://skinnyties.com/customer/account/login/">Sign In</a> &nbsp;&nbsp;
+                        <a href="https://skinnyties.com/customer/account/create/">Register</a>
+                    </div>
                     <br>
                     <input id="input" type="submit" value="Cart">
                     <div id="search">
@@ -172,7 +174,8 @@
                     show you <span><a href="http://skinnyties.com/how-to-wear/">the essentials</a></span>.</p>
             </div>
         </section>
-
+        <br>
+        <br>
         <section class="contactus">
 
             <ul>
@@ -204,6 +207,14 @@
                 <li>Shipping Info</li>
                 <li>Returns</li>
             </ul>
+
+            <div id="here">
+                <h2>We're here for you.</h2>
+                <br>
+                <a>help@skinnyties.com</a>
+                <p>877-687-8437</p>
+                <input id="sub" type="submit" value="Contact Us">
+            </div>
 
         </section>
     </footer>
