Stopping point since I'm losing my mind

--- a/HW4/frontpage.html
+++ b/HW4/frontpage.html
@@ -140,7 +140,7 @@
                 <a href="http://skinnyties.com/our-story/">View our story</a>
             </div>
     </main>
-    <!--<p id"x">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>-->
+
     <footer>
         <section class="weekly">
             <div id="weekly">
@@ -179,7 +179,8 @@
         <section class="contactus">
 
             <ul>
-                <li>Shop By</li>
+                <li class="first">Shop By</li>
+                <br>
                 <li>Collection</li>
                 <li>Color</li>
                 <li>Width</li>
@@ -188,7 +189,8 @@
             </ul>
             <br>
             <ul>
-                <li>About Us</li>
+                <li class="first">About Us</li>
+                <br>
                 <li>Our Story</li>
                 <li>Where to Buy</li>
                 <li>Wholesale</li>
@@ -196,13 +198,15 @@
             </ul>
             <br>
             <ul>
-                <li>Style Guide</li>
+                <li class="first">Style Guide</li>
+                <br>
                 <li>How to Wear</li>
                 <li>How to Tie</li>
             </ul>
             <br>
             <ul>
-                <li>Help</li>
+                <li class="first">Help</li>
+                <br>
                 <li>Contact Us</li>
                 <li>Shipping Info</li>
                 <li>Returns</li>
@@ -213,8 +217,12 @@
                 <br>
                 <a>help@skinnyties.com</a>
                 <p>877-687-8437</p>
-                <input id="sub" type="submit" value="Contact Us">
+                <input id="contact" type="submit" value="Contact Us">
             </div>
+
+            <!--<div class="copyright">
+                <p>© 2016 Skinny Ties. All rights reserved.</p>
+            </div>-->
 
         </section>
     </footer>
